# deep-paper-qa

./: .env.example  .gitignore  CLAUDE.md  README.md  baoli-unknown-design-20260330-210006.md  chainlit.md  idempotent-crunching-bunny.md  main.py  pyproject.toml  unknown-reviews.jsonl
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-08T09-14-04-461Z.yml  page-2026-04-08T09-14-59-605Z.yml  page-2026-04-08T09-15-35-475Z.yml  page-2026-04-08T09-17-28-668Z.yml  page-2026-04-08T09-17-48-015Z.yml  page-2026-04-08T09-18-07-546Z.yml  page-2026-04-08T09-18-44-432Z.yml  page-2026-04-08T09-21-37-878Z.yml  page-2026-04-08T10-14-02-476Z.yml  page-2026-04-08T10-20-07-081Z.yml  page-2026-04-08T10-20-48-931Z.yml  page-2026-04-08T10-21-29-375Z.yml  page-2026-04-08T10-22-10-547Z.yml  page-2026-04-08T10-56-00-781Z.yml  page-2026-04-08T10-56-48-230Z.yml  page-2026-04-08T10-57-48-719Z.yml  page-2026-04-08T10-58-32-292Z.yml  page-2026-04-08T11-03-05-626Z.yml  page-2026-04-08T11-03-50-985Z.yml  page-2026-04-08T11-04-43-153Z.yml  page-2026-04-08T11-05-31-855Z.yml  page-2026-04-08T11-07-33-135Z.yml  page-2026-04-08T11-08-14-453Z.yml  page-2026-04-08T11-08-55-893Z.yml  page-2026-04-08T11-10-25-916Z.yml  page-2026-04-08T11-12-00-780Z.yml  page-2026-04-08T11-13-10-170Z.yml  page-2026-04-08T11-19-17-786Z.yml  page-2026-04-08T11-21-13-450Z.yml  page-2026-04-08T11-22-55-316Z.yml  page-2026-04-08T11-35-32-995Z.yml  page-2026-04-08T11-36-51-500Z.yml
doc/: 2026-04-01-eval-agent-design.md  2026-04-01-logging-design.md  2026-04-01-logging-plan.md  2026-04-02-deep-research-design.md  (+9 more)
(+110 files in other folders)
