[project]
name = "deep-paper-qa"
version = "0.1.0"
description = "AI 科研论文智能问答助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "chainlit>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "asyncpg>=0.30",
    "aiohttp>=3.9",
    "plotly>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_paper_qa"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
